Prevent selecting options as text on mobile

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -127,10 +127,14 @@ a, button
     transition: transform 500ms ease-in-out
     &.visible
         transform: translateY(-100%)
-    .option
+    button.option
         font-size: 1em
         transition: all 300ms ease-in-out
         font-weight: bold
+        border: 0
+        display: block
+        width: 100%
+        text-align: left
         .check
             display: inline-block
             box-sizing: border-box
